src/objects/PatientMedication__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medication__c</fullName>
        <label>Medication</label>
        <referenceTo>Medication__c</referenceTo>
        <relationshipLabel>Patient Medications</relationshipLabel>
        <relationshipName>PatientMedications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Patient Medications</relationshipLabel>
        <relationshipName>PatientMedications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Patient Medication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>PatientMedication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>